hphp/hack/test/typecheck/class_level_where_clauses/variance_with_constraint.php.like_types.exp
File "variance_with_constraint.php", line 15, characters 49-62:
A 'where' type constraint is violated here (Typing[4110])
File "variance_with_constraint.php", line 12, characters 7-20:
This is the class with 'where' type constraints
File "variance_with_constraint.php", line 12, characters 37-39:
Expected num
File "variance_with_constraint.php", line 15, characters 64-66:
But got dynamic because it is an unenforceable type
File "variance_with_constraint.php", line 15, characters 20-33:
A 'where' type constraint is violated here (Typing[4110])
File "variance_with_constraint.php", line 12, characters 7-20:
This is the class with 'where' type constraints
File "variance_with_constraint.php", line 12, characters 37-39:
Expected num
File "variance_with_constraint.php", line 15, characters 35-37:
But got dynamic because it is an unenforceable type
File "variance_with_constraint.php", line 18, characters 54-67:
A 'where' type constraint is violated here (Typing[4110])
File "variance_with_constraint.php", line 12, characters 7-20:
This is the class with 'where' type constraints
File "variance_with_constraint.php", line 12, characters 37-39:
Expected num
File "variance_with_constraint.php", line 18, characters 69-71:
But got dynamic because it is an unenforceable type
File "variance_with_constraint.php", line 18, characters 25-38:
A 'where' type constraint is violated here (Typing[4110])
File "variance_with_constraint.php", line 12, characters 7-20:
This is the class with 'where' type constraints
File "variance_with_constraint.php", line 12, characters 37-39:
Expected num
File "variance_with_constraint.php", line 18, characters 40-42:
But got dynamic because it is an unenforceable type
File "variance_with_constraint.php", line 19, characters 10-15:
Invalid return type (Typing[4110])
File "variance_with_constraint.php", line 18, characters 69-71:
Expected ~int because it is an unenforceable type
File "variance_with_constraint.php", line 18, characters 40-42:
But got float
File "variance_with_constraint.php", line 27, characters 10-15:
Invalid return type (Typing[4110])
File "variance_with_constraint.php", line 25, characters 49-51:
Expected ~int because it is an unenforceable type
File "variance_with_constraint.php", line 26, characters 24-26:
But got float
File "variance_with_constraint.php", line 29, characters 41-44:
A 'where' type constraint is violated here (Typing[4110])
File "variance_with_constraint.php", line 14, characters 7-10:
This is the class with 'where' type constraints
File "variance_with_constraint.php", line 14, characters 26-28:
Expected num
File "variance_with_constraint.php", line 29, characters 46-48:
But got dynamic because it is an unenforceable type
File "variance_with_constraint.php", line 29, characters 22-25:
A 'where' type constraint is violated here (Typing[4110])
File "variance_with_constraint.php", line 14, characters 7-10:
This is the class with 'where' type constraints
File "variance_with_constraint.php", line 14, characters 26-28:
Expected num
File "variance_with_constraint.php", line 29, characters 27-29:
But got dynamic because it is an unenforceable type
File "variance_with_constraint.php", line 30, characters 10-15:
Invalid return type (Typing[4110])
File "variance_with_constraint.php", line 29, characters 27-29:
Expected ~int because it is an unenforceable type
File "variance_with_constraint.php", line 29, characters 46-48:
But got float
